data/derived/comb/progs/unify/prog1872.ml.out
Characters 26-27:
  let cat = pipe [(fun x -> x + x )] 3;;
                            ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
